--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^7.1",
-        "illuminate/support": "^6.0",
+        "illuminate/support": "^6.0|^7.0|^8.0",
         "hisorange/browser-detect": "^4.2"
     },
     "require-dev": {
