--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php": "^7.1|^8.0",
+        "php": ">=7.1",
         "hisorange/browser-detect": "^4.2"
     },
     "require-dev": {
